2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add section about external RAM.

2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/assembler.dox: New file.
	* doc/api/Makefile.am: use assembler.dox.
	* doc/api/inline_asm.dox: refer to assembler.dox.
	* doc/api/interrupts.dox: Ditto.

2002-11-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: fix typos.

2002-11-25  Theodore A. Roth  <troth@openavr.org>
  (Thanks to Steinar Haugen <xoplanet@msn.com> for contributing the iom32.h,
  iom64.h, iom8515.h and iom8535.h files.)

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom128.h: Reformat.
	* include/avr/iom32.h: New file.
	* include/avr/iom64.h: New file.
	* include/avr/iom8515.h: New file.
	* include/avr/iom8535.h: New file.

2002-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/TODO: remove obsolete entries.

2002-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/math.h: document.

2002-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/ctype.h: remove a wrong comment.

2002-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/inttypes.h: make -mint8 aware.

2002-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am: enable libprintf_flt.a.
	* include/stdio.h: explain floating point printf().
	* libc/stdio/Makefile.am: enable libprintf_flt.a.
	* libc/stdio/stdio_private.h: define values for PRINTF_LEVEL.
	* libc/stdio/vfprintf.c: implement optional floating point support.

2002-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdlib/ctype.S: cleanup empty comments.
	* libc/stdlib/ctype.S: add CVS Id.
	* libc/stdlib/ctype.S: rename cty_is* into __ctype_is*.
	* libc/stdlib/ctype.S: ispunct(): encapsulate func. calls using _U().

2002-11-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* configure.in: Don't recurse into doc dir while building unless
	"--enable-doc is passed to configure. This allows a default build to